force-app/main/default/objects/Sales_Partner_Lead__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>