force-app/main/default/objects/Sales_Partner_Lead__c/fields/Average_Electric_Bill__c.field-meta.xml
<CustomField>
    <fullName>Average_Electric_Bill__c</fullName>
    <label>Average Electric Bill</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>