force-app/main/default/objects/Sales_Partner_Lead__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Text</type>
    <length>255</length>
</CustomField>