force-app/main/default/objects/Sales_Partner_Lead__c/fields/fbclid__c.field-meta.xml
<CustomField>
    <fullName>fbclid__c</fullName>
    <label>fbclid (Facebook Click ID)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>