force-app/main/default/objects/Sales_Partner_Lead__c/fields/gclid__c.field-meta.xml
<CustomField>
    <fullName>gclid__c</fullName>
    <label>gclid (Google Click ID)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>