force-app/main/default/objects/Sales_Partner_Lead__c/fields/Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL__c</fullName>
    <label>Landing Page URL</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>