force-app/main/default/objects/Sales_Partner_Lead__c/fields/Lead_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campaign__c</fullName>
    <label>Lead Campaign</label>
    <description>Name of the partner company sending the lead</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>