force-app/main/default/objects/Sales_Partner_Lead__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Sales Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>