force-app/main/default/objects/Sales_Partner_Lead__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
</CustomField>