force-app/main/default/objects/Sales_Partner_Lead__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
</CustomField>