force-app/main/default/objects/Sales_Partner_Lead__c/fields/Traffic_Source__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Source__c</fullName>
    <label>Traffic Source</label>
    <type>Text</type>
    <length>255</length>
</CustomField>