force-app/main/default/objects/Sales_Partner_Lead__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>